@@ -11,7 +11,7 @@ Version 2.1.4 -
 - Expanded capabilities of runTests(). Will now accept embedded
   comments (default is Python style, leading '#' character, but 
   customizable). Comments will be emitted along with the tests and
-  test output. Useful test development, to create a test string
+  test output. Useful during test development, to create a test string
   consisting only of test case description comments separated by 
   blank lines, and then fill in the test cases.
 
@@ -19,6 +19,9 @@ Version 2.1.4 -
   expressions such as integer, float, identifier, etc. I used this 
   class as a sort of embedded namespace, to contain these helpers 
   without further adding to pyparsing's namespace bloat.
+
+- Minor enhancement to traceParseAction decorator, to retain the 
+  parse action's name for the trace output.
 
 
 Version 2.1.3 - May, 2016
